--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #202020;
 }
 
 .App-logo {
@@ -12,7 +13,17 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.main__content{
+  width: 100%;
+}
+.body{
+  display: flex;
+}
+@media(max-width:1220px){
+  .main__content{
+    width: 100%;
+  }
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -27,7 +38,6 @@
 .App-link {
   color: #61dafb;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
