--- a/src/admin/Components/CategoriesAdmin/Categories.module.css
+++ b/src/admin/Components/CategoriesAdmin/Categories.module.css
@@ -11,6 +11,11 @@
     margin-top:40px;
 
 }
+.editText{
+    display: flex;
+    justify-content: center;
+    margin-top:25px;
+}
 @media (max-width:1000px){
     .CategoriesMain{
         padding:0;
