--- a/src/admin/Components/CategoriesAdmin/Categories.module.css
+++ b/src/admin/Components/CategoriesAdmin/Categories.module.css
@@ -16,6 +16,11 @@
     justify-content: center;
     margin-top:25px;
 }
+.title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 @media (max-width:1000px){
     .CategoriesMain{
         padding:0;
