--- a/src/admin/Components/Sidebar/SidebarItem/sidebarItem.module.css
+++ b/src/admin/Components/Sidebar/SidebarItem/sidebarItem.module.css
@@ -3,13 +3,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 22px;
+    font-weight: 200;
     color: #eeeae2;
-    border-bottom:0.5px solid rgba(99, 95, 86, 0.57);
+    border-bottom: 1px solid rgba(99, 95, 86, 0.57);
+    text-decoration: none;
 }
-.sidebarNav:hover{
-    color:#e76e8b;
-    background-color:#202020;
-    transition:1s;
+
+.sidebarNav:hover {
+    color: #e76e8b;
+    background-color: #202020;
+    transition: 1s;
 }
